--- a/package.json
+++ b/package.json
@@ -13,9 +13,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@eslint/js": "^9.10.0",
+    "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
+    "eslint": "^9.10.0",
+    "globals": "^15.9.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.0",
+    "prettier": "3.3.3",
     "style-loader": "^4.0.0",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
@@ -23,6 +30,7 @@
     "webpack-merge": "^6.0.1"
   },
   "dependencies": {
+    "date-fns": "^3.6.0",
     "whatwg-fetch": "^3.6.20"
   }
 }
